@@ -1,9 +1,7 @@
 package com.neolearn.courses_service.interfaces.rest;
 
-import com.neolearn.courses_service.application.internal.commandservices.CourseCommandService;
-import com.neolearn.courses_service.application.internal.queryservices.CourseQueryService;
-import com.neolearn.courses_service.domain.model.aggregates.Course;
-import com.neolearn.courses_service.domain.model.commands.CompleteContentCommand;
+import com.neolearn.courses_service.domain.services.ICourseCommandService;
+import com.neolearn.courses_service.domain.services.ICourseQueryService;
 import com.neolearn.courses_service.domain.model.commands.*;
 import com.neolearn.courses_service.domain.model.queries.*;
 import com.neolearn.courses_service.interfaces.rest.resources.*;
@@ -14,7 +12,9 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
+import java.net.URI;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -23,76 +23,50 @@ import java.util.stream.Collectors;
 @Tag(name = "Courses", description = "Course Management Endpoints")
 public class CourseController {
 
-    private final CourseCommandService courseCommandService;
-    private final CourseQueryService courseQueryService;
+    private final ICourseCommandService courseCommandService;
+    private final ICourseQueryService courseQueryService;
 
+    // IDs temporales para simular un usuario autenticado.
+    // En una implementación real, esto se obtendría del token de seguridad.
+    private static final String TEMP_INSTRUCTOR_ID = "auth-instructor-id-123";
+    private static final String TEMP_USER_ID = "auth-user-id-456";
 
-    // IDs temporales para desarrollo. ¡No usar en producción!
-    // Puedes cambiarlos por cualquier valor que te sirva para probar.
-    private static final String TEMP_INSTRUCTOR_ID = "instructor-12345-abcde";
-    private static final String TEMP_USER_ID = "user-67890-fghij";
-
-    public CourseController(
-            CourseCommandService courseCommandService,
-            CourseQueryService courseQueryService) {
+    public CourseController(ICourseCommandService courseCommandService, ICourseQueryService courseQueryService) {
         this.courseCommandService = courseCommandService;
         this.courseQueryService = courseQueryService;
     }
 
     // ============================== ADMIN ENDPOINTS ============================== //
 
-
     @Operation(summary = "Create a new course")
     @PostMapping("/admins/courses")
-    public ResponseEntity<CourseResource> createCourse(
-            @RequestBody CreateCourseResource courseResource) {
+    public ResponseEntity<CourseResource> createCourse(@RequestBody CreateCourseResource resource) {
+        var command = CourseCommandFromResourceAssembler.toCommandFromResource(resource, TEMP_INSTRUCTOR_ID);
+        var createdCourse = courseCommandService.handle(command);
 
-        // El assembler debe ser modificado para aceptar el instructorId como argumento
-        var command = CourseCommandFromResourceAssembler.toCommandFromResource(courseResource, TEMP_INSTRUCTOR_ID);
+        // Construir la URI del nuevo recurso creado
+        URI location = ServletUriComponentsBuilder.fromCurrentRequest()
+                .path("/{courseId}")
+                .buildAndExpand(createdCourse.getId())
+                .toUri();
 
-        Course course = courseCommandService.handle(command);
-        var response = CourseResourceFromEntityAssembler.toResourceFromEntity(course);
-        return ResponseEntity.status(HttpStatus.CREATED).body(response);
+        var courseResource = CourseResourceFromEntityAssembler.toResourceFromEntity(createdCourse);
+        return ResponseEntity.created(location).body(courseResource);
     }
 
-    @Operation(summary = "Get all courses (published and unpublished) for admin view ")
-    @GetMapping("/admins/courses")
-    public ResponseEntity<List<CourseResource>> getAllCoursesForAdmin() {
-        // Creamos la consulta, pidiendo TODOS los cursos (onlyPublished = false)
-        var query = new GetAllCoursesQuery(false);
-        var courses = courseQueryService.handle(query);
-
-        // Transformamos la lista de entidades a una lista de recursos
-        var response = courses.stream()
-                .map(CourseResourceFromEntityAssembler::toResourceFromEntity)
-                .collect(Collectors.toList());
-
-        return ResponseEntity.ok(response);
-    }
-    @Operation(summary = "Update a course [CORRECTED & SECURED]")
+    @Operation(summary = "Update a course's details")
     @PutMapping("/admins/courses/{courseId}")
-    public ResponseEntity<CourseResource> updateCourse(
-            @PathVariable Long courseId,
-            @RequestBody UpdateCourseResource updateResource) { // Usamos el Resource corregido
+    public ResponseEntity<CourseResource> updateCourse(@PathVariable Long courseId, @RequestBody UpdateCourseResource resource) {
+        var command = UpdateCourseCommandFromResourceAssembler.toCommandFromResource(courseId, TEMP_INSTRUCTOR_ID, resource);
 
-        // 1. Ensamblar el comando con el flujo de datos correcto.
-        var command = UpdateCourseCommandFromResourceAssembler.toCommandFromResource(
-                courseId,
-                TEMP_INSTRUCTOR_ID,
-                updateResource
-        );
-
-        // 2. Enviar el comando al servicio de aplicación.
-        var updatedCourseOptional = courseCommandService.handle(command);
-
-        // 3. Devolver la respuesta. Si el Optional está vacío (curso no encontrado), devuelve 404.
-        return updatedCourseOptional
+        // El servicio devuelve un Optional<Course>
+        return courseCommandService.handle(command)
                 .map(CourseResourceFromEntityAssembler::toResourceFromEntity)
                 .map(ResponseEntity::ok)
                 .orElse(ResponseEntity.notFound().build());
     }
 
-    @Operation(summary = "Publish a course [SECURITY DISABLED]")
+    @Operation(summary = "Publish a course")
     @PostMapping("/admins/courses/{courseId}/publish")
     public ResponseEntity<Void> publishCourse(@PathVariable Long courseId) {
         var command = new PublishCourseCommand(courseId, TEMP_INSTRUCTOR_ID);
@@ -100,22 +74,29 @@ public class CourseController {
         return ResponseEntity.ok().build();
     }
 
-    @Operation(summary = "Delete a course [SECURITY DISABLED]")
+    @Operation(summary = "Delete a course")
     @DeleteMapping("/admins/courses/{courseId}")
     public ResponseEntity<Void> deleteCourse(@PathVariable Long courseId) {
-        // 1. Crear el comando de borrado usando el ID de la ruta y el ID temporal.
         var command = new DeleteCourseCommand(courseId, TEMP_INSTRUCTOR_ID);
-
-        // 2. Enviar el comando al servicio para que lo maneje.
         courseCommandService.handle(command);
-
-        // 3. Devolver una respuesta HTTP 204 No Content, que indica éxito sin cuerpo de respuesta.
         return ResponseEntity.noContent().build();
     }
 
+    @Operation(summary = "Get all courses for admin view (published and unpublished)")
+    @GetMapping("/admins/courses")
+    public ResponseEntity<List<CourseResource>> getAllCoursesForAdmin() {
+        var query = new GetAllCoursesQuery(false); // onlyPublished = false
+        var courses = courseQueryService.handle(query);
+        var resources = courses.stream()
+                .map(CourseResourceFromEntityAssembler::toResourceFromEntity)
+                .toList(); // .toList() es más moderno que .collect(Collectors.toList())
+        return ResponseEntity.ok(resources);
+    }
+
+
     // ============================== USER ENDPOINTS ============================== //
 
-    @Operation(summary = "Enroll in a course [SECURITY DISABLED]")
+    @Operation(summary = "Enroll in a course")
     @PostMapping("/users/courses/{courseId}/enroll")
     public ResponseEntity<Void> enrollInCourse(@PathVariable Long courseId) {
         var command = new EnrollCourseCommand(courseId, TEMP_USER_ID);
@@ -123,71 +104,58 @@ public class CourseController {
         return ResponseEntity.ok().build();
     }
 
-    @Operation(summary = "Get enrolled courses [SECURITY DISABLED]")
+    @Operation(summary = "Rate a course")
+    @PostMapping("/users/courses/{courseId}/rating")
+    public ResponseEntity<Void> rateCourse(@PathVariable Long courseId, @RequestBody RateCourseResource resource) {
+        var command = new RateCourseCommand(courseId, TEMP_USER_ID, resource.rating());
+        courseCommandService.handle(command);
+        return ResponseEntity.ok().build();
+    }
+
+    @Operation(summary = "Update user's progress on a course")
+    @PostMapping("/users/courses/{courseId}/progress")
+    public ResponseEntity<Void> updateProgress(@PathVariable Long courseId, @RequestBody UpdateProgressResource resource) {
+        // Usamos nuestro nuevo UpdateProgressCommand
+        var command = new UpdateProgressCommand(TEMP_USER_ID, courseId, resource.lastContentCompletedId(), resource.progressPercentage());
+        courseCommandService.handle(command);
+        return ResponseEntity.ok().build();
+    }
+
+    @Operation(summary = "Get all courses a user is enrolled in")
     @GetMapping("/users/courses/enrolled")
     public ResponseEntity<List<CourseResource>> getEnrolledCourses() {
         var query = new GetEnrolledCoursesQuery(TEMP_USER_ID);
         var courses = courseQueryService.handle(query);
-
-        var response = courses.stream()
+        var resources = courses.stream()
                 .map(CourseResourceFromEntityAssembler::toResourceFromEntity)
-                .collect(Collectors.toList());
-
-        return ResponseEntity.ok(response);
-    }
-
-
-    @Operation(summary = "Mark a piece of content as completed for a user")
-    @PostMapping("/users/courses/{courseId}/content/{contentId}/complete")
-    public ResponseEntity<Void> completeContent(
-            @PathVariable Long courseId,
-            @PathVariable String contentId,
-            @RequestHeader("X-User-Id") String userId) { // Asumiendo que usas cabeceras para el ID
-
-        // Creamos un nuevo tipo de comando
-        var command = new CompleteContentCommand(userId, courseId, contentId);
-        courseCommandService.handle(command);
-
-        return ResponseEntity.ok().build();
-    }
-    @Operation(summary = "Rate a course [SECURITY DISABLED]")
-    @PostMapping("/users/courses/{courseId}/rating")
-    public ResponseEntity<Void> rateCourse(
-            @PathVariable Long courseId,
-            @RequestBody RateCourseResource ratingResource) {
-        var command = new RateCourseCommand(
-                courseId,
-                TEMP_USER_ID,
-                ratingResource.rating());
-
-        courseCommandService.handle(command);
-        return ResponseEntity.ok().build();
+                .toList();
+        return ResponseEntity.ok(resources);
     }
 
     // ============================== PUBLIC ENDPOINTS ============================== //
 
-    @Operation(summary = "Get all published courses")
+    @Operation(summary = "Get all published courses for the public")
     @GetMapping("/courses")
     public ResponseEntity<List<CourseResource>> getAllPublishedCourses() {
         var query = new GetAllCoursesQuery(true); // onlyPublished = true
         var courses = courseQueryService.handle(query);
-
-        var response = courses.stream()
+        var resources = courses.stream()
                 .map(CourseResourceFromEntityAssembler::toResourceFromEntity)
-                .collect(Collectors.toList());
-
-        return ResponseEntity.ok(response);
+                .toList();
+        return ResponseEntity.ok(resources);
     }
 
-    @Operation(summary = "Get course details")
+    @Operation(summary = "Get public details of a specific course")
     @GetMapping("/courses/{courseId}")
     public ResponseEntity<CourseDetailsResource> getCourseDetails(@PathVariable Long courseId) {
-        // Pasamos el ID de usuario temporal para que la consulta pueda determinar
-        // si este "usuario" está inscrito, como si estuviera logueado.
-        // Si no quieres simular un usuario logueado, puedes pasar null.
+        // El QueryService ya devuelve el Resource directamente, según tu diseño.
         var query = new GetCourseDetailsQuery(courseId, TEMP_USER_ID);
         var courseDetails = courseQueryService.handle(query);
 
+        // Manejo de caso no encontrado (si el servicio devolviera Optional o lanzara excepción)
+        if (courseDetails == null) {
+            return ResponseEntity.notFound().build();
+        }
         return ResponseEntity.ok(courseDetails);
     }
 }
